[gd_scene load_steps=4 format=2]

[ext_resource path="res://HUD/Stats.gd" type="Script" id=1]
[ext_resource path="res://HUD/theme_rounded.tres" type="Theme" id=2]
[ext_resource path="res://HUD/StatsLabel.tscn" type="PackedScene" id=3]

[node name="Stats" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
countDuration = 3.0

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -195.0
margin_top = -196.0
margin_right = 196.0
margin_bottom = 197.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 24.0
margin_right = 20.0
margin_bottom = 40.0
grow_horizontal = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalScore" parent="Panel/VBoxContainer" instance=ExtResource( 3 )]
margin_right = 282.0
margin_bottom = 38.0
text = "TOTAL_SCORE"

[node name="MaxCombo" parent="Panel/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 42.0
margin_right = 282.0
margin_bottom = 80.0
text = "MAX_COMBO"

[node name="Time" parent="Panel/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 84.0
margin_right = 282.0
margin_bottom = 122.0
text = "TIME"

[node name="TotalKilled" parent="Panel/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 126.0
margin_right = 282.0
margin_bottom = 164.0
text = "TOTAL_KILLED"

[node name="TotalMelee" parent="Panel/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 168.0
margin_right = 282.0
margin_bottom = 206.0
text = "TOTAL_MELEE"

[node name="TotalExposion" parent="Panel/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 210.0
margin_right = 282.0
margin_bottom = 248.0
text = "TOTAL_EXPLOSION"

[node name="ContinueButton" type="Button" parent="Panel"]
anchor_left = 0.211
anchor_top = 0.085
anchor_right = 0.883
anchor_bottom = 1.0
margin_left = 1.42461
margin_top = 307.247
margin_right = -2.32742
margin_bottom = -14.3484
text = "LEVEL_SELECTOR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextLevelButton" type="Button" parent="Panel"]
anchor_left = 0.186
anchor_right = 0.868
anchor_bottom = 1.0
margin_left = 37.5504
margin_top = 285.646
margin_right = -44.1116
margin_bottom = -68.3536
text = "NEXT_LEVEL"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.08
autostart = true

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="Panel/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="Panel/NextLevelButton" to="." method="_on_NextLevelButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
